I made some changes on my headings and page content landmarks inorder to pass accessibility tests

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="card">
                 <img src="images/illustration-hero.svg" alt="illustration">
                 <div class="card-text">
-                    <h1>Order Summary</h1>
+                    <h2>Order Summary</h2>
                     <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you
                         like!
                     </p>
                 </div>
 
-                <div class="card-content">
+                <div class="content-container">
                     <img src="images/icon-music.svg" alt="icon-music">
                     <div class="annual-plan">
                         <h3>Annual Plan</h3>
