I made some changes on my heading levels and page content landmarks inorder to pass accessibility tests.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <main role="main">
         <div class="row">
             <div class="card">
                 <img src="images/illustration-hero.svg" alt="illustration">
@@ -27,10 +27,10 @@
                     </p>
                 </div>
 
-                <div class="card-content">
+                <div class="content-container">
                     <img src="images/icon-music.svg" alt="icon-music">
                     <div class="annual-plan">
-                        <h3>Annual Plan</h3>
+                        <h2>Annual Plan</h2>
                         <p>$59.99/year</p>
                     </div>
                     <div class="change">
@@ -40,9 +40,9 @@
                 <div class="payment">
                     <button type="button">Proceed to payment</button>
                 </div>
-                <div class="cancel">
+                <footer role="contentinfo">
                     <a href="#">Cancel Order</a>
-                </div>
+                </footer>
 
 
 
@@ -51,7 +51,7 @@
 
         </div>
 
-    </div>
+    <main>
 </body>
 
 </html>
