making more changes to my landmarks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <main role="main">
+    <main>
         <div class="row">
             <div class="card">
                 <img src="images/illustration-hero.svg" alt="illustration">
@@ -40,7 +40,7 @@
                 <div class="payment">
                     <button type="button">Proceed to payment</button>
                 </div>
-                <footer role="contentinfo">
+                <footer>
                     <a href="#">Cancel Order</a>
                 </footer>
 
@@ -51,7 +51,7 @@
 
         </div>
 
-    <main>
+    </main>
 </body>
 
 </html>
